--- a/src/Settings/App.SettingsGroup.json
+++ b/src/Settings/App.SettingsGroup.json
@@ -317,6 +317,18 @@
     "longDesc":  "Host name to forward mavlink to. i.e: localhost:14445",
     "type":             "string",
     "default":     "localhost:14445"
+},
+{
+    "name":         "useComponentInformationQuery",
+    "shortDesc":    "Use COMPONENT_INFORMATION query (beta)",
+    "type":         "bool",
+    "default":      false
+},
+{
+    "name":         "hideFlyViewPanels",
+    "shortDesc":    "Hide fly view panels",
+    "type":         "bool",
+    "default":      false
 }
 ]
 }
